# FluxSharp

./: .gitignore  .toolversions  BOUNDS_CHECKING_CHANGELOG.md  CHANGELOG.md  CI_CD_GITFLOW_GUIDE.md  CI_CD_SYSTEM_INDEX.md  CODE_OF_CONDUCT.md  COMPLETION-REPORT.md  CONTRIBUTING.md  ERROR_MESSAGES_COMPLETE.md  FINAL_STATUS.txt  FINAL_SUMMARY.md  FLOAT_DOUBLE_UPDATE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INDEX.md  LICENSE  MATH_IMPLEMENTATION.md  Makefile  Makefile.clean  PROJECT-STATUS.md  QUICK_COMMANDS.sh  README-USAGE.md  README.md  README_CI_CD_ECOSYSTEM.md  RELEASE_v1.0.1_SUMMARY.md  REPOSITORY-STRUCTURE.md  SECURITY.md  SETUP_COMPLETE.md  SUMMARY.txt  build.sh  check_prerequisites.sh  cleanup.sh  cleanup_git.sh  create_release.sh  example_class.asm  example_class.fsh  final_cleanup.sh  fluxc  gitflow.sh  (+38 more)
docs/: ASYNC_AWAIT.md  ASYNC_AWAIT_GUIDE.md  BEFORE_AFTER_COMPARISON.md  CLASSES_GUIDE.md  COMPILATION_SYSTEM.md  COMPLETE_BUILD_GUIDE.md  CONTROL_FLOW.md  DEFAULT_FUNCTIONS.md  EXAMPLES.md  FILES_MANIFEST.md  FLOAT_DOUBLE_QUICKSTART.md  FLUX_LANGUAGE_SUMMARY.md  FUNCTIONS.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  LANGUAGE_GUIDE.md  OPERATORS.md  QUICKSTART.md  README.md  SECURITY.md  TYPE_CONVERSION.md
examples/: .gitignore  09-async-await.fsh  arrays.fsh  (+13 more)
flux_compiler/fluxc/: .gitignore  Cargo.toml
flux_compiler/fluxc/runtime/: .gitignore  Makefile  jit.asm  runtime.asm  scheduler.asm
flux_compiler/fluxc/src/: advanced_security.rs  async_runtime.rs  bounds_checker.rs  error_handler.rs  exception_handler.rs  flux_grammar.pest  lib.rs  main.rs
(+62 files in other folders)
