[package]
name = "fluxc"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fluxc"
path = "src/main.rs"

[dependencies]
# Parsing
pest = "2.7"
pest_derive = "2.7"

# CLI (Pour faire: fluxc compile main.fsh)
clap = { version = "4.4", features = ["derive"], optional = true }

# Gestion d'erreurs propre
anyhow = "1.0"

[features]
default = ["cli"]
cli = ["clap"]
